--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,5 +1,9 @@
 2009-01-27  Mickaël Renault <mickaelrenault@free.fr> 
 
+	
+
+2009-01-27  Mickaël Renault <mickaelrenault@free.fr> 
+
 	* Molecule.WebSite/atomes/webmusic/Default.aspx: removed search text box
 	  from WebMusic page
 
