added a message when the user enqueue a song in the playlist

--- a/trunk/Molecule.WebSite/atomes/webmusic/App_LocalResources/Default.aspx.fr.resx
+++ b/trunk/Molecule.WebSite/atomes/webmusic/App_LocalResources/Default.aspx.fr.resx
@@ -183,4 +183,7 @@
   <data name="PlayAll" xml:space="preserve">
     <value>Jouer tout</value>
   </data>
+  <data name="SongsAdded" xml:space="preserve">
+    <value>Morceaux ajoutés à la playlist</value>
+  </data>
 </root>
