--- a/trunk/Molecule.WebSite/atomes/photo/Services/Messages.resx
+++ b/trunk/Molecule.WebSite/atomes/photo/Services/Messages.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MusicProviderError" xml:space="preserve">
-    <value>Failed to retrieve music information from {0}.</value>
+  <data name="PhotoProviderError" xml:space="preserve">
+    <value>Failed to retrieve photo information from {0}.</value>
   </data>
 </root>
