--- a/trunk/Molecule.WebSite/App_LocalResources/PreferencesPage.Master.fr.resx
+++ b/trunk/Molecule.WebSite/App_LocalResources/PreferencesPage.Master.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="General" xml:space="preserve">
+    <value>Général</value>
+  </data>
   <data name="Preferences" xml:space="preserve">
     <value>Préférences</value>
   </data>
