--- a/trunk/Molecule.WebSite/App_LocalResources/Page.Master.fr.resx
+++ b/trunk/Molecule.WebSite/App_LocalResources/Page.Master.fr.resx
@@ -120,6 +120,9 @@
   <data name="Loading" xml:space="preserve">
     <value>Chargement en cours...</value>
   </data>
+  <data name="NoEventsToShow" xml:space="preserve">
+    <value>Aucun événements à afficher.</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
   </data>
