--- a/trunk/Molecule.WebSite/App_LocalResources/Page.Master.resx
+++ b/trunk/Molecule.WebSite/App_LocalResources/Page.Master.resx
@@ -120,6 +120,9 @@
   <data name="Loading" xml:space="preserve">
     <value>Loading...</value>
   </data>
+  <data name="NoEventsToShow" xml:space="preserve">
+    <value>No events to show.</value>
+  </data>
   <data name="Welcome" xml:space="preserve">
     <value>Welcome</value>
   </data>
