--- a/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="LocateOnMap" xml:space="preserve">
+    <value>Locate on map</value>
+  </data>
+  <data name="MapBy" xml:space="preserve">
+    <value>Map by</value>
+  </data>
   <data name="OriginaleImage" xml:space="preserve">
-    <value>Image originale</value>
+    <value>Originale Image</value>
   </data>
 </root>
