--- a/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Album" xml:space="preserve">
+    <value>Album</value>
+  </data>
+  <data name="Collection" xml:space="preserve">
+    <value>Collection</value>
+  </data>
+  <data name="Folder" xml:space="preserve">
+    <value>Folder</value>
+  </data>
   <data name="LocateOnMap" xml:space="preserve">
     <value>Locate on map</value>
   </data>
@@ -125,5 +134,8 @@
   </data>
   <data name="OriginaleImage" xml:space="preserve">
     <value>Originale Image</value>
+  </data>
+  <data name="Tag" xml:space="preserve">
+    <value>Tag</value>
   </data>
 </root>
