--- a/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
@@ -126,6 +126,9 @@
   <data name="Folder" xml:space="preserve">
     <value>Folder</value>
   </data>
+  <data name="GetPhotosFrom" xml:space="preserve">
+    <value>Get photos from</value>
+  </data>
   <data name="LocateOnMap" xml:space="preserve">
     <value>Locate on map</value>
   </data>
@@ -134,6 +137,9 @@
   </data>
   <data name="OriginaleImage" xml:space="preserve">
     <value>Originale Image</value>
+  </data>
+  <data name="PhotoCollectionName" xml:space="preserve">
+    <value>Photo collection name</value>
   </data>
   <data name="Tag" xml:space="preserve">
     <value>Tag</value>
