webmusic admin globalization

--- a/trunk/Molecule.WebSite/App_GlobalResources/webmusic.fr.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/webmusic.fr.resx
@@ -186,4 +186,7 @@
   <data name="SongsAdded" xml:space="preserve">
     <value>Morceaux ajoutés à la playlist</value>
   </data>
+  <data name="GetSongsFrom" xml:space="preserve">
+    <value>Récupérer la musique depuis</value>
+  </data>
 </root>
