--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
@@ -123,7 +123,13 @@
   <data name="Close" xml:space="preserve">
     <value>Fermer</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>Mot de passe</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Enregistrer</value>
+  </data>
+  <data name="User" xml:space="preserve">
+    <value>Utilisateur</value>
   </data>
 </root>
