--- a/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
@@ -117,10 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Theme" xml:space="preserve">
-    <value>Thème</value>
+  <data name="LastLogin" xml:space="preserve">
+    <value>Last login</value>
   </data>
-  <data name="Users" xml:space="preserve">
-    <value>Utilisateurs</value>
+  <data name="NewUser" xml:space="preserve">
+    <value>New user</value>
+  </data>
+  <data name="PasswordRequired" xml:space="preserve">
+    <value>Password required</value>
+  </data>
+  <data name="Theme" xml:space="preserve">
+    <value>Theme</value>
+  </data>
+  <data name="UserRequired" xml:space="preserve">
+    <value>User name required</value>
   </data>
 </root>
