--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
@@ -126,14 +126,20 @@
   <data name="Close" xml:space="preserve">
     <value>Fermer</value>
   </data>
+  <data name="General" xml:space="preserve">
+    <value>Général</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Chargement...</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Mot de passe</value>
   </data>
+  <data name="Preferences" xml:space="preserve">
+    <value>Préférences</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Enregistrer</value>
-  </data>
-  <data name="Theme" xml:space="preserve">
-    <value>Thème</value>
   </data>
   <data name="User" xml:space="preserve">
     <value>Utilisateur</value>
