--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
@@ -126,8 +126,17 @@
   <data name="Close" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="General" xml:space="preserve">
+    <value>Général</value>
+  </data>
+  <data name="Loading" xml:space="preserve">
+    <value>Loading...</value>
+  </data>
   <data name="Password" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="Preferences" xml:space="preserve">
+    <value>Preferences</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
