--- a/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
@@ -123,6 +123,9 @@
   <data name="NewUser" xml:space="preserve">
     <value>New user</value>
   </data>
+  <data name="NoEventsToShow" xml:space="preserve">
+    <value>No events to show.</value>
+  </data>
   <data name="PasswordRequired" xml:space="preserve">
     <value>Password required</value>
   </data>
@@ -131,5 +134,8 @@
   </data>
   <data name="UserRequired" xml:space="preserve">
     <value>User name required</value>
+  </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>Welcome</value>
   </data>
 </root>
