--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
@@ -147,6 +147,9 @@
   <data name="Preferences" xml:space="preserve">
     <value>Preferences</value>
   </data>
+  <data name="Reinit" xml:space="preserve">
+    <value>Reinitialize</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Save</value>
   </data>
