--- a/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/molecule.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="DisplayLogo" xml:space="preserve">
+    <value>Display logo</value>
+  </data>
   <data name="LastLogin" xml:space="preserve">
     <value>Last login</value>
   </data>
