--- a/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/photo.resx
@@ -121,7 +121,7 @@
     <value>Album</value>
   </data>
   <data name="Calendar" xml:space="preserve">
-    <value>Calendar</value>
+    <value>See on calendar</value>
   </data>
   <data name="Collection" xml:space="preserve">
     <value>Collection</value>
