--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.fr.resx
@@ -147,8 +147,8 @@
   <data name="Preferences" xml:space="preserve">
     <value>Préférences</value>
   </data>
-  <data name="Reinit" xml:space="preserve">
-    <value>Réinitialiser</value>
+  <data name="Reload" xml:space="preserve">
+    <value>Recharger</value>
   </data>
   <data name="Save" xml:space="preserve">
     <value>Enregistrer</value>
