--- a/trunk/Molecule.WebSite/App_GlobalResources/photo.fr.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/photo.fr.resx
@@ -121,7 +121,7 @@
     <value>Album</value>
   </data>
   <data name="Calendar" xml:space="preserve">
-    <value>Calendrier</value>
+    <value>Voir sur le calendrier</value>
   </data>
   <data name="Collection" xml:space="preserve">
     <value>Collection</value>
