--- a/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
+++ b/trunk/Molecule.WebSite/App_GlobalResources/Common.resx
@@ -138,6 +138,9 @@
   <data name="General" xml:space="preserve">
     <value>Général</value>
   </data>
+  <data name="Home" xml:space="preserve">
+    <value>Home</value>
+  </data>
   <data name="Loading" xml:space="preserve">
     <value>Loading...</value>
   </data>
