--- a/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
+++ b/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
@@ -189,4 +189,7 @@
   <data name="GetSongsFrom" xml:space="preserve">
     <value>Récupérer la musique depuis</value>
   </data>
+  <data name="Music" xml:space="preserve">
+    <value>Musique</value>
+  </data>
 </root>
