--- a/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
+++ b/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
@@ -192,4 +192,7 @@
   <data name="Music" xml:space="preserve">
     <value>Musique</value>
   </data>
+  <data name="EnableLastFmNotification" xml:space="preserve">
+    <value>Activer la notification Last.fm</value>
+  </data>
 </root>
