--- a/trunk/Molecule.MvcWebSite/App_GlobalResources/molecule.fr.resx
+++ b/trunk/Molecule.MvcWebSite/App_GlobalResources/molecule.fr.resx
@@ -165,4 +165,7 @@
   <data name="Welcome" xml:space="preserve">
     <value>Bienvenue</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Titre</value>
+  </data>
 </root>
