--- a/trunk/Molecule.MvcWebSite/App_GlobalResources/molecule.resx
+++ b/trunk/Molecule.MvcWebSite/App_GlobalResources/molecule.resx
@@ -165,4 +165,7 @@
   <data name="Welcome" xml:space="preserve">
     <value>Welcome</value>
   </data>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
+  </data>
 </root>
