add empty action

--- a/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
+++ b/trunk/Molecule.MvcWebSite/App_GlobalResources/webmusic.fr.resx
@@ -195,4 +195,7 @@
   <data name="EnableLastFmNotification" xml:space="preserve">
     <value>Activer la notification Last.fm</value>
   </data>
+  <data name="Empty" xml:space="preserve">
+    <value>Vider</value>
+  </data>
 </root>
